--- a/GAE-WebApp/src/main/webapp/result.html
+++ b/GAE-WebApp/src/main/webapp/result.html
@@ -1,31 +1,11 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-	<title>My Page</title> 
-	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-
-        <!--///////////////////////////////////////////////////////////////////////////////////////////////////
-        //
-        //		Styles
-        //
-        ///////////////////////////////////////////////////////////////////////////////////////////////////--> 
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
-    
-	
-        <!--///////////////////////////////////////////////////////////////////////////////////////////////////
-        //
-        //		Scripts
-        //
-        ///////////////////////////////////////////////////////////////////////////////////////////////////-->
-	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-        <script type='text/javascript' src='js/home.js'></script> 
-        <script type='text/javascript' src='js/flickr.js'></script>
-	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-        <script type='text/javascript' src='js/jquery.easing.1.3.js'></script>                    
+	<title>List of results</title>                    
 </head> 
 
 <body> 
-<div data-role="page" id="landing" data-theme="c"> 
+<div data-role="page" id="results" data-theme="c"> 
 
         <!-- Header -->
         <div data-role="header" data-position="fixed" data-theme="c">                 
@@ -38,23 +18,23 @@
         <ul data-role="listview" data-inset="true">
             <li><a href="">
                    <img src="img/icon/flickr.jpg" alt="Photos" class="ui-li-icon">
-                   <span class="ui-li-count ui-btn-up-c ui-btn-corner-all">62</span>Photos</a>
+                   <span id="num_photos" class="ui-li-count ui-btn-up-c ui-btn-corner-all">0</span>Photos</a>
             </li>
             <li><a href="">
                    <img src="img/icon/youtube.png" alt="Videos" class="ui-li-icon">
-                   <span id="photos" class="ui-li-count ui-btn-up-c ui-btn-corner-all">62</span>Videos</a>
+                   <span id="num_videos" class="ui-li-count ui-btn-up-c ui-btn-corner-all">0</span>Videos</a>
             </li>
             <li><a href="">
                    <img src="img/icon/nytimes.jpeg" alt="News" class="ui-li-icon">
-                   <span class="ui-li-count ui-btn-up-c ui-btn-corner-all">62</span>News</a>
+                   <span id="num_news" class="ui-li-count ui-btn-up-c ui-btn-corner-all">0</span>News</a>
             </li>
             <li><a href="">
                    <img src="img/icon/twitter.png" alt="Tweets" class="ui-li-icon">
-                   <span class="ui-li-count ui-btn-up-c ui-btn-corner-all">62</span>Tweets</a>
+                   <span id="num_tweets" class="ui-li-count ui-btn-up-c ui-btn-corner-all">0</span>Tweets</a>
             </li>
             <li><a href="">
                    <img src="img/icon/wikipedia.png" alt="wikipedia" class="ui-li-icon">
-                   <span class="ui-li-count ui-btn-up-c ui-btn-corner-all">62</span>Wikipedia</a>
+                   <span id="num_wikis" class="ui-li-count ui-btn-up-c ui-btn-corner-all">0</span>Wikipedia</a>
             </li>
         </ul>
   
