--- a/GAE-WebApp/src/main/webapp/index.html
+++ b/GAE-WebApp/src/main/webapp/index.html
@@ -10,16 +10,16 @@
         //
         ///////////////////////////////////////////////////////////////////////////////////////////////////--> 
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/tolito-1.0.5.min.css" />
-        <link rel="stylesheet" href="css/home.css" />
-    
+        <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/freebase/suggest/4_2/suggest.min.css" />
+        <link href="css/photoswipe.css" type="text/css" rel="stylesheet" /> 
+        <link type="text/css" rel="stylesheet" href="css/simplePagination.css"/>
+
 	
         <!--///////////////////////////////////////////////////////////////////////////////////////////////////
         //
         //		Scripts
         //
         ///////////////////////////////////////////////////////////////////////////////////////////////////-->
-	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
         <script type="text/javascript" src="js/sha1.js"></script>
         <script type="text/javascript" src="js/codebird.js"></script>
         <script type='text/javascript' src='js/api/flickr.js'></script>
@@ -27,14 +27,17 @@
         <script type='text/javascript' src='js/api/youtube.js'></script>
         <script type='text/javascript' src='js/api/twitter.js'></script>
         <script type='text/javascript' src='js/api/wikipedia.js'></script>
-        <script type='text/javascript' src='js/home.js'></script> 
+        <script type="text/javascript" src="js/klass.min.js"></script> 
+        <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+        <script type="text/javascript" src="https://www.gstatic.com/freebase/suggest/4_2/suggest.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-        <script type='text/javascript' src='js/jquery.easing.1.3.js'></script>
-        <script type="text/javascript" src="js/tolito-1.0.5.min.js"></script>                    
+        <script type="text/javascript" src="js/code.photoswipe.jquery-3.0.5.min.js"></script>
+        <script type="text/javascript" src="js/jquery.simplePagination.js"></script>
+        <script type='text/javascript' src='js/home.js'></script>                   
 </head> 
 
 <body id="home"> 
-<div data-role="page"  data-theme="c"> 
+<div data-role="page" class="home-page" data-theme="c"> 
         <!-- Header -->
         <div data-role="header" data-position="fixed" data-theme="c">                 
                 <h1 class="">Social Media Search</h1>                 
